@@ -1,12 +1,13 @@
 package dev.youagent.plan;
 
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.Map;
 
 public record ExecutionReport(Map<String, TaskStatus> statuses, Map<String, String> outputs) {
     public ExecutionReport {
-        statuses = Map.copyOf(new LinkedHashMap<>(statuses));
-        outputs = Map.copyOf(new LinkedHashMap<>(outputs));
+        statuses = Collections.unmodifiableMap(new LinkedHashMap<>(statuses));
+        outputs = Collections.unmodifiableMap(new LinkedHashMap<>(outputs));
     }
 
     public boolean succeeded() {
